# voyager-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20240101000000_create_users_table.sql  20240401000000_add_email_verification.sql  20240501000000_add_refresh_tokens.sql  20240502000000_add_password_reset.sql
src/: main.rs
src/auth/: mod.rs
src/auth/db/: mod.rs  tokens.rs  users.rs
src/auth/models/: mod.rs  user.rs
src/auth/routes/: auth.rs  mod.rs
src/auth/services/: email.rs  mod.rs
src/auth/utils/: error.rs  jwt.rs  mod.rs  password.rs  token.rs
